# qt-avif-image-plugin

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README.txt  appveyor.yml  build_libqavif_dynamic.sh  build_libqavif_static.sh  metainfo.yaml  qt-avif-image-plugin.pro  qt-avif-image-plugin_local-libavif.pro
ext/: build_local_libaom_libavif.sh
ext/libavif/ext/aom/: AUTHORS  CHANGELOG  CMakeLists.txt  README.md  mainpage.dox
ext/libavif/ext/aom/aom/: aom_encoder.h  aomcx.h  exports_com
ext/libavif/ext/aom/aom_dsp/: aom_dsp.cmake  aom_dsp_rtcd_defs.pl  avg.c  bitwriter.h  grain_synthesis.h  noise_model.c  psnr.c  sad.c  variance.c
ext/libavif/ext/aom/aom_dsp/arm/: fwd_txfm_neon.c  hadamard_neon.c  highbd_convolve8_sve.c  highbd_hadamard_neon.c  highbd_intrapred_neon.c  intrapred_neon.c  loopfilter_neon.c  mem_neon.h  sad4d_neon.c
ext/libavif/ext/aom/aom_dsp/flow_estimation/: corner_detect.c  corner_match.c  disflow.c  flow_estimation.c  ransac.c
ext/libavif/ext/aom/aom_dsp/flow_estimation/arm/: disflow_neon.c
ext/libavif/ext/aom/aom_dsp/flow_estimation/x86/: disflow_sse4.c
ext/libavif/ext/aom/aom_dsp/riscv/: mem_rvv.h
ext/libavif/ext/aom/aom_dsp/simd/: v256_intrinsics_v128.h
ext/libavif/ext/aom/aom_dsp/x86/: aom_subpixel_8t_intrin_ssse3.c  avg_intrin_sse2.c  convolve_avx2.h  highbd_sad_sse2.asm  sad_sse2.asm  variance_avx2.c  variance_sse2.c
ext/libavif/ext/aom/aom_mem/: aom_mem.h
ext/libavif/ext/aom/aom_ports/: aarch64_cpudetect.c  aom_once.h  aom_timer.h  arm_cpudetect.c  ppc_cpudetect.c
ext/libavif/ext/aom/aom_util/: aom_thread.h
ext/libavif/ext/aom/apps/: aomdec.c  aomenc.c
ext/libavif/ext/aom/av1/: arg_defs.c  arg_defs.h  av1.cmake  av1_cx_iface.c  av1_dx_iface.c  ducky_encode.cc  reference_manager.cc
ext/libavif/ext/aom/av1/common/: av1_common_int.h  av1_rtcd_defs.pl  blockd.h  cdef_block_simd.h  convolve.c  entropymode.c  obu_util.c  quant_common.c  quant_common.h  reconinter.c  reconintra.c  resize.c  resize.h  restoration.c  restoration.h  thread_common.c  thread_common.h
ext/libavif/ext/aom/av1/common/arm/: cdef_block_neon.c  highbd_convolve_sve2.c  highbd_inv_txfm_neon.c  jnt_convolve_neon.c  reconintra_neon.c
ext/libavif/ext/aom/av1/common/riscv/: highbd_convolve_rvv.c
ext/libavif/ext/aom/av1/common/x86/: convolve_2d_avx2.c  highbd_wiener_convolve_avx2.c  (+1 more)
ext/libavif/ext/aom/av1/decoder/: decodeframe.c  decodemv.c  obu.c
ext/libavif/ext/aom/av1/encoder/: allintra_vis.c  allintra_vis.h  aq_cyclicrefresh.c  av1_ml_partition_models.h  av1_noise_estimate.c  av1_quantize.c  bitstream.c  bitstream.h  block.h  cnn.c  compound_type.c  encode_strategy.c  encode_strategy.h  encodeframe.c  encodeframe_utils.c  encodeframe_utils.h  encoder.c  encoder.h  encoder_alloc.h  encoder_utils.c  encoder_utils.h  ethread.c  ethread.h  firstpass.c  firstpass.h  global_motion_facade.c  gop_structure.c  intra_mode_search.c  intra_mode_search.h  intra_mode_search_utils.h  k_means_template.h  level.c  mcomp.c  mcomp.h  motion_search_facade.c  nonrd_opt.h  nonrd_pickmode.c  optical_flow.c  palette.c  palette.h  (+32 more)
ext/libavif/ext/aom/common/: args.c  av1_config.c  webmdec.cc  y4menc.c
ext/libavif/ext/aom/doc/: AlgorithmDescription.md
ext/libavif/ext/aom/doc/dev_guide/: av1_encoder.dox
ext/libavif/ext/aom/examples/: inspect.c  multilayer_metadata.cc  svc_encoder_rtc.c  svc_encoder_rtc.cc
ext/libavif/ext/aom/test/: altref_test.cc  av1_convolve_test.cc  av1_external_partition_test.cc  av1_k_means_test.cc  av1_key_value_api_test.cc  avif_progressive_test.cc  bitwriter_buffer_test.cc  cdef_test.cc  cnn_test.cc  comp_mask_variance_test.cc  datarate_test.cc  datarate_test.h  decode_scalability_test.cc  encode_api_test.cc  encode_test_driver.cc  encode_test_driver.h  encodemb_test.cc  end_to_end_psnr_test.cc  ethread_test.cc  film_grain_table_test.cc  frame_size_tests.cc  fwd_kf_test.cc  hadamard_test.cc  hash_test.cc  horz_superres_test.cc  invalid_file_test.cc  kf_test.cc  level_test.cc  pickrst_test.cc  quantize_lp_func_test.cc  ratectrl_qmode_test.cc  ratectrl_test.cc  resize_test.cc  rt_end_to_end_test.cc  selfguided_filter_test.cc  svc_datarate_test.cc  temporal_filter_test.cc  test-data.sha1  test.cmake  test_data_util.cmake  (+3 more)
ext/libavif/ext/aom/tools/auto_refactor/: av1_preprocess.py
qtbuild_5.15.2/: qt-avif-image-plugin_local_alternative-libavif.pro
qtbuild_5.15.2-ro/: qt-avif-image-plugin_local_alternative-libavif-ro.pro
qtbuild_6.2.2/: qt-avif-image-plugin_local_alternative-libavif.pro
qtbuild_6.2.4/: qt-avif-image-plugin_local_alternative-libavif.pro
qtbuild_6.2.4-ro/: qt-avif-image-plugin_local_alternative-libavif-ro.pro
qtbuild_6.5.3/: qt-avif-image-plugin_local_alternative-libavif.pro
qtbuild_6.5.3-ro/: qt-avif-image-plugin_local_alternative-libavif-ro.pro
qtbuild_6.7.0/: qt-avif-image-plugin_local_alternative-libavif.pro
qtbuild_6.7.0-ro/: qt-avif-image-plugin_local_alternative-libavif-ro.pro
qtbuild_6.7.1/: qt-avif-image-plugin_local_alternative-libavif.pro
qtbuild_6.7.1-ro/: qt-avif-image-plugin_local_alternative-libavif-ro.pro
qtbuild_6.7.2/: qt-avif-image-plugin_local_alternative-libavif.pro
qtbuild_6.7.2-ro/: qt-avif-image-plugin_local_alternative-libavif-ro.pro
qtbuild_6.8.0/: qt-avif-image-plugin_local_alternative-libavif.pro
qtbuild_6.8.0-ro/: qt-avif-image-plugin_local_alternative-libavif-ro.pro
qtbuild_6.8.1/: qt-avif-image-plugin_local_alternative-libavif.pro
qtbuild_6.8.1-ro/: qt-avif-image-plugin_local_alternative-libavif-ro.pro
qtbuild_6.8.3/: qt-avif-image-plugin_local_alternative-libavif.pro
qtbuild_6.8.3-ro/: qt-avif-image-plugin_local_alternative-libavif-ro.pro
qtbuild_6.9.2/: qt-avif-image-plugin_local_alternative-libavif.pro
qtbuild_6.9.3/: qt-avif-image-plugin_local_alternative-libavif.pro
share/kservices5/: imagethumbnail.desktop
share/kservices5/qimageioplugins/: avifs.desktop
src/: CMakeLists.txt  avif.json  avif_qt.cpp  avif_qt_p.h  main.cpp  qavifhandler.cpp  qavifhandler_p.h
src-dynamic/: avif.json  avif_qt.cpp  avif_qt.pro
src-static/: avif_qt.cpp  avif_qt.pro
(+14 files in other folders)
